--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-    --azul: #3b82f6;
+    --azul: #0077b2;
     --blanco: #ffffff;
     --gris-claro: #f5f5f5;
     --gris: #94a3b8;
@@ -146,6 +146,7 @@ header h1 {
     color: #b91c1c;
 }
 .alerta.success {
+    background-color: lawngreen;
 }
 
 .contenedor {
@@ -350,6 +351,7 @@ main {
 }
 .modal .cerrar-modal img {
     width: 100%;
+    cursor: pointer;
 }
 
 .modal .formulario {
